Resolve SonarLint Problem